# fitkit

./: .gitmodules  README.md
.svn/: wc.db
apps/audio/ring_buffer_fpga/mcu/: main.c
apps/audio/ring_buffer_mcu/: project.xml
apps/audio/ring_buffer_mcu/mcu/: fspi.h
apps/communication/1-wire_mcu/: README
apps/communication/1-wire_mcu/mcu/: main.c
apps/communication/ds18b20/fpga/: top_level.vhd
apps/communication/ethernet/fpga/: eth.vhd  top_level.vhd
apps/communication/infrared/fpga/: top_level.vhd
apps/communication/infrared/mcu/: main.c
apps/communication/serial_echo/fpga/: clk_sync.vhd
apps/demo/: description.xml
apps/demo/bram/mcu/: main.c
apps/demo/display/: project.xml
apps/demo/keyboard/fpga/: top_level.vhd
apps/demo/led/: project.xml
apps/demo_msp/clock/mcu/: main.c
apps/demo_msp/free_rtos/rtos/: package_msp430.xml  tasks.c
apps/demo_msp/led/mcu/: main.c
apps/demo_msp/thermometer/mcu/: main.c
apps/demo_msp/uCOSII/: Makefile  project.xml
apps/demo_msp/uCOSII/_xmsgs/: bitgen.xmsgs  ngdbuild.xmsgs  xst.xmsgs
apps/demo_msp/voltage_generator/: project.xml
apps/demo_picoblaze/led/doc/: index.rst
apps/demo_picoblaze/led/mcu/: main.c
apps/games/life/fpga/: ca_life.vhd  ca_life_fsm.vhd
apps/games/life/mcu/: main.c  vga_block.c  vga_block.h
apps/games/pexeso/: project.xml
apps/games/pexeso/fpga/: bcd_cnt.vhd  pexeso_top.vhd
apps/games/pexeso/mcu/: main.c
apps/games/snake/mcu/: snake.c  snake.h
apps/games/sokoban/doc/: index.rst
apps/games/sokoban/fpga/: transcript
apps/games/sokoban/mcu/: main.c
apps/games/tetris/: project.xml
apps/games/tetris/mcu/: utils.c
apps/games/ticktacktoe/doc/: index.rst
apps/modul_eth/: description.xml
apps/modul_eth/01_ping/mcu/: main.c
apps/modul_eth/03_dns/mcu/: main.c
apps/modul_eth/04_http_server/doc/: index.rst
apps/modul_eth/05_telnet_client/mcu/: main.c
apps/modul_eth/06_telnet_server/mcu/: main.c
apps/modul_nrf/01_client/fpga/: top.vhd
apps/vga/dram/fpga/: top_level.vhd
apps/vga/dram/mcu/: main.c
apps/vga/graphics_3d/mcu/: struct3d.h
apps/vga/textmode/mcu/: main.c
apps/vga/texture/mcu/: vga.c
apps/vga/triangle_rasterizer/mcu/: main.c
apps/vga/video_player/doc/: index.rst
apps/vga/video_player/fpga/: top_level.vhd
base/: Makefile.inc  Remote.inc  modelsim.fdo
fpga/chips/architecture_bare/: arch_bare_ifc.vhd  package.xml
fpga/chips/architecture_gp_dbg/vmon/: package.xml
fpga/chips/architecture_ide/: package.xml
fpga/chips/architecture_pc/: package.xml
fpga/chips/architecture_pc_dbg/: arch_pc_ifc.vhd
fpga/ctrls/audio/: aic23b_dsp_write.vhd
fpga/ctrls/ide/: ide_pio_ctrl.vhd  ide_port.vhd
fpga/ctrls/infra/: nec_entity.vhd  nec_full.vhd  rc5.xml  sirc_entity.vhd  sirc_full.vhd
fpga/ctrls/keyboard/: keyboard_ctrl.vhd
fpga/ctrls/ps2/: ps2_entity.vhd
fpga/ctrls/serial/: serial_config.vhd
fpga/ctrls/serial/sim/: sim.fdo
fpga/ctrls/spi/: package.xml  spi_adc.vhd  spi_adc_autoincr.vhd
fpga/ctrls/vga/: vga_config.vhd  vga_ctrl.vhd
fpga/units/picocpu/: pico_reg.vhd
ivh-proj/: README.md  fpga_inst.vhd
mcu/libfitkit/: fitkitlib.h  flash.h  fpga.h  globfun.h  uart.c
mcu/libs/enc28j60/: enc28j60_arp.h  enc28j60_dhcp.c  enc28j60_dhcp.h  enc28j60_icmp.c  enc28j60_spi.c  enc28j60_spi.h  enc28j60_spi_rx.c  enc28j60_tcp.c  enc28j60_tcp.h  enc28j60_udp.c  ip_stack.h  package.xml  tcpip_stack.h
mcu/libs/infra/: infra_comm.h
mcu/libs/irq/: package.xml
mcu/libs/keyboard/: package.xml
mcu/libs/lcd_cz/: display_cz.c
mcu/libs/serial/: fpga_rs232.c
mcu/libs/thermometer/: package.xml
mcu/libs/xmodem/: crc16.h  xmodem.h
tools/: README.md
tools/fcmake/src/: main.cpp
tools/fkterm/: fkterm.py  setup.py
tools/fkterm/fkterm/: ChannelFTDI.py  Events.py  channel.py  terminal.py  xmodem.py
tools/fktest/: fktest.py  setup.py
tools/libkitclient/contrib/: 99-libftdi.rules
tools/libkitclient/examples/: CMakeLists.txt
tools/nsispack/: CMakeLists.txt  NSIS.InstallOptions.ini.in  NSIS.template.in  exportlibs.py
tools/pythonqt/: CMakeLists.txt
tools/qdevkit/: CMakeLists.txt
trunk/apps/audio/ring_buffer_fpga/: project.xml
trunk/apps/communication/: description.xml
trunk/apps/communication/ds18b20/: project.xml
trunk/apps/communication/ethernet/: project.xml
trunk/apps/communication/ide/: project.xml
trunk/apps/communication/infrared/: project.xml
trunk/apps/communication/serial_echo/: project.xml
trunk/apps/demo/bram/: project.xml
trunk/apps/demo/keyboard/: project.xml
trunk/apps/demo/keyboard_irq/: project.xml
trunk/apps/demo/keyboard_lcd/: project.xml
trunk/apps/demo_msp/: description.xml
trunk/apps/demo_msp/clock/: project.xml
trunk/apps/demo_msp/display/: project.xml
trunk/apps/demo_msp/display_cz/: README  project.xml
trunk/apps/demo_msp/free_rtos/: project.xml
trunk/apps/demo_msp/led/: project.xml
trunk/apps/demo_msp/ps2/: project.xml
trunk/apps/demo_msp/signal_generator/: project.xml
trunk/apps/demo_picoblaze/: description.xml
trunk/apps/demo_picoblaze/led/: project.xml
trunk/apps/games/snake/: project.xml
trunk/apps/games/sokoban/: project.xml
trunk/apps/games/ticktacktoe/: README  project.xml
trunk/apps/modul_eth/01_ping/: project.xml
trunk/apps/modul_eth/02_sntp/: project.xml
trunk/apps/modul_eth/04_http_server/: project.xml
trunk/apps/modul_eth/05_telnet_client/: project.xml
trunk/apps/modul_eth/06_telnet_server/: project.xml
trunk/apps/modul_nrf/01_client/: project.xml
trunk/apps/vga/line_rasterizer/: project.xml
trunk/apps/vga/texture/: README
trunk/apps/vga/triangle_rasterizer/: project.xml
trunk/apps/vga/video_player/: project.xml
trunk/base/: filelist.xml  xilinxise.tcl  xilinxiseext.tcl  xilinxisim.tcl
trunk/fpga/chips/: fpga_xc3s50.ucf  fpga_xc3s50.vhd
trunk/fpga/chips/architecture_bare/: tlv_bare_ifc.vhd
trunk/fpga/chips/architecture_gp/: package.xml  (+1 more)
trunk/mcu/libfitkit/: Makefile  arch_specific.h  cmd.h  define.h  filetransfer.c  filetransfer.h  flash_fpga.c  flash_fpga.h  globfun.c  library.xml  spi.c  terminal.c  timer_b.h  uart.h
(+184 files in other folders)
